--- a/index.html
+++ b/index.html
@@ -37,12 +37,18 @@
   <section id="skills">
     <h2>Skills</h2>
     <div class="skills-container">
-      <div class="skill"><img src="images/java.png"><p>Java</p></div>
-      <div class="skill"><img src="images/sql.jpg"><p>SQL</p></div>
-      <div class="skill"><img src="images/html.png"><p>HTML</p></div>
-      <div class="skill"><img src="images/css.png"><p>CSS</p></div>
-      <div class="skill"><img src="images/github.png"><p>Git & GitHub</p></div>
-    </div>
+  <div class="skill"><img src="images/java.png"><p>Java</p></div>
+  <div class="skill"><img src="images/sql.jpg"><p>SQL</p></div>
+  <div class="skill"><img src="images/html.png"><p>HTML</p></div>
+  <div class="skill"><img src="images/css.png"><p>CSS</p></div>
+  <div class="skill"><img src="images/github.png"><p>Git & GitHub</p></div>
+  <div class="skill"><img src="images/javascript.png"><p>JavaScript</p></div>
+  <div class="skill"><img src="images/servlets.png"><p>Servlets</p></div>
+  <div class="skill"><img src="images/jsp.png"><p>JSP</p></div>
+  <div class="skill"><img src="images/hibernate.png"><p>Hibernate</p></div>
+  <div class="skill"><img src="images/spring.png"><p>Spring</p></div>
+</div>
+
   </section>
 
   <section id="projects">
